# LLGI

./: .gitignore  CMakeLists.txt  README.md  package-lock.json
examples/: CMakeLists.txt
examples/GPUParticle/: GPUParticle.cpp
src_test/: CMakeLists.txt  RenderTestHelper.cpp  RenderTestHelper.h  TestHelper.cpp  TestHelper.h  TextureDataGenerator.cpp  TextureDataGenerator.h  TextureRenderTestHelper.cpp  TextureRenderTestHelper.h  capture.cpp  main.cpp  test_clear.cpp  test_compute_shader.cpp  test_compute_storage_buffer.cpp  test_depth_stencil.cpp  test_mipmap.cpp  test_renderPass.cpp  test_simple_render.cpp  test_simple_render_storage_buffer.cpp  test_simple_render_texture.cpp  test_textures.cpp  test_webgpu_browser.cpp
src_test/Shaders/GLSL_VULKAN/: storage_buffer_history_ribbon_render.vert  storage_buffer_history_ribbon_write.comp  storage_buffer_matrix_indexing.comp  storage_buffer_matrix_indexing_write.comp  storage_buffer_multi_slot_raw_render.vert  storage_buffer_multi_slot_raw_write.comp  storage_buffer_multi_slot_read_write.comp  storage_buffer_raw_transform_render.vert  storage_buffer_raw_transform_write.comp  storage_buffer_read_slot1.comp  storage_buffer_structured_matrix_record.comp  storage_buffer_structured_matrix_record_write.comp  storage_buffer_structured_slot1.comp  storage_buffer_write_slot1.comp
src_test/Shaders/HLSL_DX12/: storage_buffer_history_ribbon_render.vert  storage_buffer_history_ribbon_write.comp  storage_buffer_matrix_indexing.comp  storage_buffer_matrix_indexing_write.comp  storage_buffer_multi_slot_raw_render.vert  storage_buffer_multi_slot_raw_write.comp  storage_buffer_multi_slot_read_write.comp  storage_buffer_raw_transform_render.vert  storage_buffer_raw_transform_write.comp  storage_buffer_read_slot1.comp  storage_buffer_structured_matrix_record.comp  storage_buffer_structured_matrix_record_write.comp  storage_buffer_structured_slot1.comp  storage_buffer_write_slot1.comp
src_test/Shaders/Metal/: storage_buffer_history_ribbon_render.vert  storage_buffer_history_ribbon_write.comp  storage_buffer_matrix_indexing.comp  storage_buffer_matrix_indexing_write.comp  storage_buffer_multi_slot_raw_render.vert  storage_buffer_multi_slot_raw_write.comp  storage_buffer_multi_slot_read_write.comp  storage_buffer_raw_transform_render.vert  storage_buffer_raw_transform_write.comp  storage_buffer_read_slot1.comp  storage_buffer_structured_matrix_record.comp  storage_buffer_structured_matrix_record_write.comp  storage_buffer_structured_slot1.comp  storage_buffer_write_slot1.comp
src_test/Shaders/SPIRV/: storage_buffer_history_ribbon_render.vert.spv  storage_buffer_history_ribbon_write.comp.spv  storage_buffer_matrix_indexing.comp.spv  storage_buffer_matrix_indexing_write.comp.spv  storage_buffer_multi_slot_raw_render.vert.spv  storage_buffer_multi_slot_raw_write.comp.spv  storage_buffer_raw_transform_render.vert.spv  storage_buffer_raw_transform_write.comp.spv  storage_buffer_structured_matrix_record.comp.spv  storage_buffer_structured_matrix_record_write.comp.spv
src_test/Shaders/WebGPU/: basic.comp  instancing.vert  readwrite.comp  readwrite_texture.comp  simple_compute_rectangle.frag  simple_compute_rectangle.vert  simple_constant_rectangle.frag  simple_constant_rectangle.vert  simple_depth_texture_rectangle.frag  simple_mrt_texture_rectangle.frag  simple_rectangle.frag  simple_rectangle.vert  simple_texture_rectangle.frag  simple_texture_rectangle.vert  storage_buffer_history_ribbon_render.vert  storage_buffer_history_ribbon_write.comp  storage_buffer_matrix_indexing.comp  storage_buffer_matrix_indexing_write.comp  storage_buffer_multi_slot_raw_render.vert  storage_buffer_multi_slot_raw_write.comp  storage_buffer_multi_slot_read_write.comp  storage_buffer_raw_transform_render.vert  storage_buffer_raw_transform_write.comp  storage_buffer_read_slot1.comp  storage_buffer_structured_matrix_record.comp  storage_buffer_structured_matrix_record_write.comp  storage_buffer_structured_slot1.comp  storage_buffer_write_slot1.comp  textures.frag  vertex_structured.vert  vtf.vert
src_test/Shaders/WebGPU_Compiled/: basic.comp  instancing.vert  readwrite.comp  readwrite_texture.comp  simple_compute_rectangle.frag  simple_compute_rectangle.vert  simple_constant_rectangle.frag  simple_constant_rectangle.vert  simple_mrt_texture_rectangle.frag  simple_rectangle.frag  simple_rectangle.vert  simple_texture_rectangle.frag  simple_texture_rectangle.vert  storage_buffer_history_ribbon_render.vert  storage_buffer_history_ribbon_write.comp  storage_buffer_matrix_indexing.comp  storage_buffer_matrix_indexing_write.comp  storage_buffer_multi_slot_raw_render.vert  storage_buffer_multi_slot_raw_write.comp  storage_buffer_multi_slot_read_write.comp  storage_buffer_raw_transform_render.vert  vtf.vert  (+8 more)
src_test/browser/: pre_webgpu_test.js  run_webgpu_browser_test.mjs
tools/ShaderTranspilerCore/: CMakeLists.txt  ShaderTranspilerCore.cpp  ShaderTranspilerCore.h
(+82 files in other folders)
